--- a/public/src/index.scss
+++ b/public/src/index.scss
@@ -6,4 +6,11 @@ body {
   box-sizing: border-box;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
+}
+
+.root {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 20vh 60vh 20vh;
 }
