--- a/public/src/index.scss
+++ b/public/src/index.scss
@@ -1,4 +1,6 @@
 @import './components/sass/variable.scss';
+@import './components/sass/input.scss';
+@import './components/sass/button.scss';
 
 body {
   margin: 0;
