Created Room component

--- a/public/src/index.scss
+++ b/public/src/index.scss
@@ -1,6 +1,7 @@
 @import './components/sass/variable.scss';
 @import './components/sass/input.scss';
 @import './components/sass/button.scss';
+@import './components/sass/bulkToggle.scss';
 
 body {
   margin: 0;
