--- a/public/src/components/homeHeader/homeHeader.scss
+++ b/public/src/components/homeHeader/homeHeader.scss
@@ -30,5 +30,8 @@
         display: flex;
         justify-content: space-around;
 
+        &-name {
+            box-shadow: 5px 5px 20px 3px rgba(0, 0, 0, 0.8)
+        }
     }
 }
