--- a/public/src/components/sass/variable.scss
+++ b/public/src/components/sass/variable.scss
@@ -3,3 +3,4 @@ $gradient: rgb(255, 160, 90);
 $light-orange: rgb(255, 170, 105);
 $bulkToggleON: rgba(255, 170, 105, 0.6);
 $bulkToggleOFF: rgb(234, 230, 235);
+$succes-color: rgb(0, 230, 0);
