--- a/public/src/components/Rooms/rooms.scss
+++ b/public/src/components/Rooms/rooms.scss
@@ -5,6 +5,7 @@
     padding: 40px 20px;
 
     &__room {
+        width: 120px;
         background-color: white;
         display: inline-block;
         padding: 20px;
