--- a/public/src/components/sass/bulkToggle.scss
+++ b/public/src/components/sass/bulkToggle.scss
@@ -22,7 +22,7 @@
         right: 0;
         bottom: 0;
         border-radius: 20px;
-        background-color: $bulkToggleOFF;
+        background-color: rgb(151, 151, 255);
         transition: .6s;
 
         &::before {
